--- a/springproject/src/main/resources/application.properties
+++ b/springproject/src/main/resources/application.properties
@@ -1,10 +1,31 @@
-##server.port = 3328
+server.port = 3328
 
 ## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
-##spring.datasource.url = jdbc:mysql://localhost:3306/review?useSSL=false
-##spring.datasource.username = root
-##spring.datasource.password = password
+spring.datasource.url = jdbc:mysql://localhost:3306/review?useSSL=false
+spring.datasource.username = root
+spring.datasource.password = password
 
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = update
+
+spring.jpa.show-sql=true
+
+
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
+
+##starts from here
+
+##server.port = 3328
+##spring.datasource.url=jdbc:mysql://springproject1.cfyclcgi517i.us-east-1.rds.amazonaws.com:3306/review?useSSL=false
+##spring.datasource.username=root
+##spring.datasource.password=password
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -19,12 +40,3 @@
 
 ##spring.mvc.view.prefix=/WEB-INF/jsp/
 ##spring.mvc.view.suffix=.jsp
-
-##starts from here
-
-server.port=5000 
-spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME}:${RDS_PORT}/${RDS_DB_NAME} 
-spring.datasource.username=${RDS_USERNAME}
-spring.datasource.password=${RDS_PASSWORD}
-spring.jpa.hibernate.ddl-auto=create
-
